# cellular_automata

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/automata/: life.cpp  life.h  life_like.cpp  life_like.h  predator_and_prey.cpp  predator_and_prey.h
src/automata_test/: life.cpp  life_like.cpp  life_nocurses.cpp  predator_and_prey.cpp
src/curses/: screen.cpp  screen.h
src/game/: game.cpp  game.h
src/grid/: grid.h  toroidal_grid.h
src/predator_and_prey/: predator_and_prey.cpp
src/test/: test_grid.cpp  test_life.cpp  test_predator_and_prey.cpp  test_screen.cpp
